--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a href="https://github.com/">
             <img src="assets/img/Octocat.png" alt="octocat">
         </a>
-        <button type="button" class="btn">
-      <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
+
+        <button type="button" class="btn"><a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
     </button>
     </div>
 </body>
